--- a/demo/demo.css
+++ b/demo/demo.css
@@ -3,22 +3,15 @@
     These styles donot affect the acrylic effect
 */
 
-body {
-    margin: 0; /* To avoid scroll bars in page */
-    font-size: 1em;
+body{
+    text-align: center;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-  }
-  
-  main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: row wrap;
-    height: 100vh;
-  }
+}
 
-.cards{
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2), 0 1px 8px rgba(0, 0, 0, 0.4);
-    padding: 4em 6em;
+.cards {
+    height: 70vh;
+    margin-top: 15vh;
+    width: 60vw;
+    margin-left: 20vw;
 }
