Added more info

--- a/src/acrylic.css
+++ b/src/acrylic.css
@@ -1,3 +1,9 @@
+/*
+* Author: Kolappan Nathan
+* License: MIT
+* GitHub URL: https://github.com/kolappannathan/acrylic-css
+*/
+
 body,
 .nk-acrylic:before {
   background: fixed;
