Added version numbers

--- a/src/acrylic.css
+++ b/src/acrylic.css
@@ -2,6 +2,7 @@
 * Author: Kolappan Nathan
 * License: MIT
 * GitHub URL: https://github.com/kolappannathan/acrylic-css
+* Version: 1.0.0
 */
 
 body,
