--- a/src/acrylic.css
+++ b/src/acrylic.css
@@ -1,8 +1,11 @@
 /*
-* Author: Kolappan Nathan
-* License: MIT
-* GitHub URL: https://github.com/kolappannathan/acrylic-css
-* Version: 1.0.0
+* File          : acrylic.css
+* Description   : This css bring Microsoft fluent design based acrylic effect to the web.
+* Author        : Kolappan Nathan
+* License       : MIT
+* GitHub        : https://github.com/kolappannathan/acrylic-css
+* Version       : 1.0.1
+* Last Modified : 03-Jan-2019
 */
 
 body,
