--- a/src/acrylic.css
+++ b/src/acrylic.css
@@ -11,7 +11,7 @@
 body,
 .nk-acrylic:before {
   background: fixed;
-  background-image: url(../demo/demo.jpg);
+  background-image: url("https://source.unsplash.com/random");
   background-color: #333;
   background-size: cover;
 }
